--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [[bin]]
-name = "check-lock"
+name = "pta"
 path = "src/main.rs"
 
 [[bin]]
-name = "cargo-check-lock"
+name = "cargo-pta"
 path = "src/bin/cargo-check-lock.rs"
 
 [dependencies]
