--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
-channel = "nightly"
+channel = "nightly-2023-09-13"
 components = ["rust-src", "rustc-dev", "llvm-tools-preview", "clippy"]
