--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ once_cell = "1.13.1"
 
 [profile.dev]
 incremental = false
+panic = "abort"
 
 [package.metadata.rust-analyzer]
 rustc_private = true
