--- a/toys/rec/Cargo.toml
+++ b/toys/rec/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "inter"
+name = "rec"
 version = "0.1.0"
-authors = ["BurtonQin <bobbqqin@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# parking_lot = "0.12"
-# spin = "0.5.2"
