--- a/toys/two-candvar/Cargo.toml
+++ b/toys/two-candvar/Cargo.toml
@@ -1,13 +1,8 @@
 [package]
-name = "inter"
+name = "two-condvar"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# parking_lot = "0.12"
-# spin = "0.5.2"
-
-[profile.dev]
-opt-level = 2
