--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ serde_json = "1.0.81"
 serde = { version = "1.0.198", features = ["derive"] }
 regex = "1.6.0"
 once_cell = "1.13.1"
+itertools = "*"
 
 [profile.dev]
 incremental = false
