--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,2 @@
 [toolchain]
-channel = "nightly-2023-09-13"
-components = ["rust-src", "rustc-dev", "llvm-tools-preview", "clippy"]
+channel = "nightly"
