--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ name = "cargo-pta"
 path = "src/bin/cargo-check-lock.rs"
 
 [dependencies]
-cargo_metadata = { version = "0.12.1", optional = true }
-directories = { version = "3.0.1", optional = true }
-rustc_version = { version = "0.3.0", optional = true }
+cargo_metadata = { version = "0.19.0", optional = true }
+directories = { version = "5.0.1", optional = true }
+rustc_version = { version = "0.4.1", optional = true }
 getrandom = { version = "0.2.0", features = ["std"] }
 byteorder = "1.3"
 env_logger = "0.10.0"
@@ -29,20 +29,17 @@ rand = "0.8.0"
 clap = "4.5.4"
 shellwords = "1.1.0"
 petgraph = "0.6.0"
-bitflags = "1.3.2"
+bitflags = "2.6.0"
 smallvec = "1.8.0"
 serde_json = "1.0.81"
-serde = { version = "1.0.198", features = ["derive"] }
+serde = { version = "1.0.215", features = ["derive"] }
 regex = "1.6.0"
 once_cell = "1.13.1"
 itertools = "*"
-anyhow = "*"
-thiserror = "*"
-plex = "*"
 
 [profile.dev]
 incremental = false
-panic = "abort"
+panic = "unwind"
 
 [package.metadata.rust-analyzer]
 rustc_private = true
