--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2021"
 path = "src/report.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [[bin]]
-name = "pta"
+name = "pn"
 path = "src/main.rs"
 
 [[bin]]
-name = "cargo-pta"
+name = "cargo-pn"
 path = "src/bin/cargo-check-lock.rs"
 
 [dependencies]
