--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ serde = { version = "1.0.215", features = ["derive"] }
 regex = "1.6.0"
 once_cell = "1.13.1"
 itertools = "*"
+toml = "0.8.19"
 
 [profile.dev]
 incremental = false
