--- a/example/thousands_code/Cargo.toml
+++ b/example/thousands_code/Cargo.toml
@@ -10,7 +10,8 @@ num-traits = { version = "0.2", optional = true }
 rand = "0.8"
 rand_chacha = "0.3"
 nalgebra = "0.33.0"
-
+parking_lot = "*"
+spin = "0.5.2"
 
 [dev-dependencies]
 quickcheck = "1.0"
