--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ path = "src/main.rs"
 name = "cargo-pn"
 path = "src/bin/cargo-check-lock.rs"
 
+[[example]]
+name = "memory_watcher_demo"
+path = "examples/memory_watcher_demo.rs"
+
 [dependencies]
 cargo_metadata = { version = "0.19.0", optional = true }
 directories = { version = "5.0.1", optional = true }
