--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,10 @@ clap = "4.5.4"
 shellwords = "1.1.0"
 petgraph = "0.6.0"
 bitflags = "2.6.0"
-smallvec = "1.8.0"
+smallvec = { version = "1.8.0", features = ["serde"] }
 serde_json = "1.0.81"
 serde = { version = "1.0.215", features = ["derive"] }
+ron = "0.8"
 regex = "1.6.0"
 once_cell = "1.13.1"
 itertools = "*"
@@ -39,6 +40,19 @@ thiserror = "*"
 anyhow = "*"
 nom = "*"
 libc = "*"
+indexmap = "2.12.0"
+criterion = { version = "0.5", optional = true }
+num = { version = "0.4", optional = true }
+num-rational = { version = "0.4", optional = true }
+num-bigint = { version = "0.4", optional = true }
+
+[features]
+default = []
+bench = ["criterion"]
+inhibitor = []
+reset = []
+pnml = []
+invariants = ["num", "num-rational", "num-bigint"]
 
 [profile.dev]
 incremental = false
