--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "RustPTA"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 
 # See more keys and their definitions at https:
@@ -53,6 +53,7 @@ inhibitor = []
 reset = []
 pnml = []
 invariants = ["num", "num-rational", "num-bigint"]
+atomic-violation = []
 
 [profile.dev]
 incremental = false
