--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ anyhow = "*"
 nom = "*"
 libc = "*"
 indexmap = "2.12.0"
+rayon = "1.10"
 criterion = { version = "0.7.0", optional = true }
 num = { version = "0.4", optional = true }
 num-rational = { version = "0.4", optional = true }
