chore: Update .gitignore to include additional patterns for ignoring .vscode, .cursor, mir_dump, and __pycache__ directories, enhancing project cleanliness and maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 **/target/
-/.vscode
+.vscode
 *.dot
 /toys
 **/tmp
@@ -7,4 +7,7 @@ RustPetriNet.tar.gz
 example/rayon
 /example
 
-/.cursor/**
+.cursor
+mir_dump/
+
+**/__pycache__
